--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+
+  <body>
+    <a href="https://flatironschool.com">Flatiron School</a>
+  </body>
+
+</html>
+
+
+Open `index.html` in your text editor. Add an `a` tag with the inner text of `Flatiron School`
+anywhere in the file. Then set the `href` attribute of your new link element to `https://flatironschool.com`.
