--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE HTML>
+<html>
+
+  <head>
+
+  </head>
+
+  <body>
+    <a href="https://flatironschool.com">Flatiron School</a>
+  </body>
+
+</html>
