--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Link</title>
+    <a href="https://flatironschool.com">Flatiron School</a>
+
+  </head>
+  <body>
+
+  </body>
+</html>
