--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head><title>Title</title></head>
+  <body><a href="https://flatironschool.com">Flatiron School</a></body>
+</html>
